[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/ScreenFader.shader" type="Shader" id=1]
[ext_resource path="res://singletons/Manager.gd" type="Script" id=2]
[ext_resource path="res://singletons/ScreenFader.gd" type="Script" id=3]
[ext_resource path="res://art/transition/inward.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/fadeamount = 0.381
shader_param/invert = false
shader_param/contrast = 1.0

[node name="Manager" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" type="TextureRect" parent="FadeLayer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
script = ExtResource( 3 )
fadeamount = 0.381

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
bus = "BGM"
